--- a/HelixTest(Android)/app/src/main/res/values/strings.xml
+++ b/HelixTest(Android)/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="title_activity_choices_">Choices_Activity</string>
     <string name="title_activity_available_results">AvailableResultsActivity</string>
     <string name="title_activity_result_detail">ResultDetailActivity</string>
+    <string name="title_activity_progress_in_list">ProgressInListActivity</string>
 </resources>
