--- a/HelixTest(Android)/app/src/main/res/values/strings.xml
+++ b/HelixTest(Android)/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Опросы</string>
+    <string name="app_name">Helix Quiz</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
